Fixed: Empty white space at the bottom of the login page.
OHM-548: Bring in MOM changes up through 4/11

--- a/ohm/login.css
+++ b/ohm/login.css
@@ -1,5 +1,4 @@
 html, body {
-	height: 100%;
 	background-color: #1E74D1;
 	background-image: none;
 }
@@ -30,6 +29,9 @@ div.mainbody {
 .midwrapper:after {
   content: "";
   display: block;
+}
+.footerwrapper {
+	background-color: #1E74D1;
 }
 
 .login-wrapper {
